added description for default values of USER_MEM_ARGS